<resources>
    <string name="app_name">深圳大学门户</string>
    <string name="login_title">用户登录</string>
    <string name="login_username_hint">学号/工号</string>
    <string name="login_password_hint">密码</string>
    <string name="login_remember_pwd">记住密码</string>
    <string name="login_button">登  录</string>
    <string name="login_error_empty_username">请输入学号/工号</string>
    <string name="login_error_empty_password">请输入密码</string>
    <string name="login_success">登录成功</string>
    <string name="university_name">深圳大学</string>
    <string name="university_name_en">SHENZHEN UNIVERSITY</string>
    <string name="campus_app_name">我的校园</string>
    <string name="login_copyright">© 2026 深圳大学 信息中心</string>
</resources>